# Evaluation_vectorielle

./: .gitignore  Makefile  README.md  Readme.md  affichage3D.py  appel_API.c  main.c  makefile
Affichage/: .gitignore  CMakeCache.txt  CMakeLists.txt  Evalutation_vectorielle  Gestion_Evaluation_Vectorielle.pro  Gestion_Evaluation_Vectorielle.pro.user.a393259  Makefile  README.md  addfunctwindow.cpp  addfunctwindow.h  addfunctwindow.ui  addvectwindow.cpp  addvectwindow.h  addvectwindow.ui  addvectwindow1.h  addvectwindow1.ui  cmake_install.cmake  configure.sh  configure_mac.sh  datawindow.cpp  display_4d.cpp  display_4d.h  display_4d.ui  displaywindow.cpp  displaywindow.h  displaywindow.ui  executewindow.cpp  executewindow.h  executewindow.ui  gestion_ES.c  gestion_ES.h  liste_vecteurs.c  liste_vecteurs.h  loadwindow.cpp  loadwindow.h  loadwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  savewindow.cpp  (+5 more)
Affichage/Affichage3D/: .gitignore  Affichage3D  CMakeLists.txt  Transfert_liste_vecteurs.txt  __init__.py  affichage3D.py  appel_API.c  appel_API.h
Affichage/Evalutation_vectorielle_autogen/: moc_predefs.h  mocs_compilation.cpp
Affichage/Evalutation_vectorielle_autogen/D2MWKIZDYH/: moc_addfunctwindow.cpp  moc_addvectwindow.cpp  moc_datawindow.cpp  moc_display_4d.cpp  moc_displaywindow.cpp  moc_executewindow.cpp  moc_loadwindow.cpp  moc_mainwindow.cpp  moc_savewindow.cpp
Affichage/Evalutation_vectorielle_autogen/include/: ui_addfunctwindow.h  ui_addvectwindow.h  ui_datawindow.h  ui_display_4d.h  ui_displaywindow.h  ui_executewindow.h  ui_loadwindow.h  ui_mainwindow.h  ui_savewindow.h
Affichage/Forms/: addfunctwindow1.ui  loadwindow.ui
Affichage/Headers/: addfunctwindow1.h  chargement_fichier.h  chartview.h  datawindow.h  display_4d.h  displaywindow.h  executewindow.h  gestion_ES.h  liste_vecteurs.h  savewindow.h  statistiques.h  tinyexpr.h  transfert_fichiers_affichage3D.h  vecteurs.h
Affichage/Sources/: addfunctwindow.cpp  addfunctwindow.ui  addfunctwindow1.cpp  addvectwindow.cpp  addvectwindow1.cpp  chargement_fichier.cpp  chartview.cpp  datawindow.cpp  display_4d.cpp  displaywindow.cpp  displaywindow.ui  executewindow.cpp  gestion_ES.c  liste_vecteurs.c  loadwindow.cpp  loadwindow.ui  main.cpp  mainwindow.cpp  mainwindow.ui  savewindow.cpp  savewindow.ui  statistiques.c  tinyexpr.c  transfert_fichiers_affichage3D.cpp  vecteurs.c
Affichage/WINDOWS/: 3D_run.bat  Postscript_call.bat  README.md  Run.bat  Transfert_donnees_statistiques_API.txt  Transfert_equations.txt  WIDOWS_installer.bat  WINDOWS_installer.bat
Affichage/ressources/: test.p  test.ps  test.txt  test1.p  test1.ps  test1.txt  test2.p  test3.p
Affichage/src/: addfunctwindow.cpp  addvectwindow.cpp  datawindow.ui  display_4d.cpp  executewindow.cpp  gestion_ES.c  liste_vecteurs.c  main.cpp  mainwindow.ui  savewindow.cpp
Antoine module 2D et données/Qt/: README.txt
Antoine module 2D et données/Qt/QTPREMIERPAS/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  table.cpp  table.h
Linux_Mac/Affichage3D/: CMakeLists.txt  Transfert_donnees_statistiques_API.txt  Transfert_equations.txt  affichage3D.py  appel_API.c  main.c  run3D.sh
Linux_Mac/Headers/: addfunctwindow.h  chartview.h  display_4d.h  executewindow.h  liste_vecteurs.h  loadwindow.h  mainwindow.h  savewindow.h
Linux_Mac/Sources/: addfunctwindow.cpp  addvectwindow.ui  chargement_fichier.cpp  display_4d.ui  executewindow.cpp  executewindow.ui  gestion_ES.c  loadwindow.cpp  mainwindow.cpp  statistiques.c  transfert_fichiers_affichage3D.cpp
Windows/: 3D_run.bat  Gnuplot_call.bat  WINDOWS_installer.bat
Windows/Sources_python/: Transfert_donnees_statistiques_API.txt  Transfert_equations.txt  Transfert_liste_vecteurs.txt  affichage3D.py
headers/: gestion_ES.h  gestion_fichier.h  liste_vecteurs.h  statistiques.h  vecteurs.h
ressources/: another.txt  another_ps.ps  script.p  script_gnuplot.p
src/: gestion_ES.c  liste_vecteurs.c  statistiques.c  tinyexpr.c  vecteurs.c
